--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2021"
 [dependencies]
 axum = "0.7.5"
 chrono = "0.4.38"
-mysql = "25.0.0"
 serde = { version = "1.0.198", features = ["derive"] }
 tokio = { version = "1.37.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["fs", "trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "chrono", "mysql" ] }
